<resources>
    <string name="app_name">MAD2bikeshop</string>
    <string name="bookTitle">Make a Booking</string>
    <!--<string name="donateSubtitle">Please Give Generously</string>-->
    <string name="enter_details">Please fill ALL fields</string>
    <string name="bookButton">Book Now!</string>
    <string name="pickupButton">Pick Up Location</string>
    <string name="dropoffButton">Drop Off Location</string>
    <string name="bikeButton">Choose Bikes</string>
    <string name="bikeMale">Adult Male Bike</string>
    <string name="adultFemale">Adult Female Bike</string>
    <string name="electric">Electric Bike</string>
    <string name="kids">Kids Bike</string>

    <string name="name">Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="phoneNo">Phone No.</string>
    <string name="email">Email</string>
    <string name="date">Date</string>
    <string name="pickup">Pick Up</string>
    <string name="dropoff">Drop Off</string>
    <string name="price">Price</string>
    <string name="bikeType">Bike Type</string>
    <string name="id">ID</string>


    <string name="action_book">Book Now</string>
    <string name="action_booklist">Booking History</string>
    <string name="action_details">Booking Details</string>
    <string name="action_location">Locations</string>
    <string name="action_about">About Us</string>
    <string name="action_theme">Theme</string>

    <string name="total">Total so Far</string>
    <string name="totalSoFar">$ Total</string>
    <string name="nameHint">Please Enter Your Full Name:</string>
    <string name="phoneHint">Please Enter Your Phone Number:</string>
    <string name="emailHint">Please Enter Your Email Address:</string>
    <string name="pickupHint">Please Enter Pick Up Location:</string>
    <string name="dropoffHint">Please Enter Drop Off Location:</string>
    <string name="bookingsNotFound">Nothing Booked Yet...\nGo Make a Booking!</string>
    <string name="bookError">Error : Couldn\'t Make a Booking...</string>

    <string name="bookingDetails">Booking Details</string>
    <string name="amt">Amount :</string>


    <string name="aboutus_message">Go Biking with Viking!</string>
    <string name="callUs">Call Us At: 0830648694</string>
    <string name="emailUs">Email Us At: VBH@Gmail.ie</string>
    <string name="address">Address: 129A Parade Quay</string>


    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>
    <string name="nav_header_subtitle">Viking Biking</string>
    <string name="nav_header_title">Viking Bike Hire</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <string name="messageLoading">Please Wait while the Bookings are Loading...</string>
    <string name="accessControl">Access Control</string>


    <string name="select_profile_image">Select Profile Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>