<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="booking"
            type="com.wit.mad2bikeshop.model.BookModel" />
    </data>

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:elevation="24dp">

    <RelativeLayout
        android:id="@+id/cardBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="1dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/name"
            android:text="@string/update"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneNumber"
            android:layout_marginTop="10dp"
            android:text="@{booking.date}"
            android:textSize="24sp" />
        //android:text="@string/date"

        <TextView
            android:id="@+id/name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="0dp"
            android:textSize="24sp"
            android:text="@{booking.name}"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonUpdate"
            android:layout_marginTop="10dp"
            android:text="@{booking.phoneNumber}"
            android:textSize="24sp" />
        //android:text="@string/phoneNumber"

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonUpdate"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="0dp"
            android:layout_marginTop="56dp"
            android:layout_toEndOf="@+id/date"
            android:text="@string/delete"
            android:textSize="16sp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
</layout>