<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="bookingvm"
            type="com.wit.mad2bikeshop.ui.detail.BookingDetailViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.BookingDetailFragment">

    <EditText
        android:id="@+id/editDropoff"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDate" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDate" />

    <EditText
        android:id="@+id/editID"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="476dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDate" />

    <EditText
        android:id="@+id/editPickup"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDate" />

    <TextView
        android:id="@+id/detailPickup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="1dp"
        android:text="@string/pickup"
        android:textAlignment="textEnd"
        android:textColor="@color/bloodorange"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editEmail"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailDate" />

    <TextView
        android:id="@+id/detailDropoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="1dp"
        android:text="@string/dropoff"
        android:textAlignment="textEnd"
        android:textColor="@color/bloodorange"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editEmail"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailDate" />

    <TextView
        android:id="@+id/detailPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="1dp"
        android:text="@string/price"
        android:textAlignment="textEnd"
        android:textColor="@color/bloodorange"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editEmail"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailDate" />

    <TextView
        android:id="@+id/detailID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="476dp"
        android:layout_marginEnd="1dp"
        android:text="@string/id"
        android:textAlignment="textEnd"
        android:textColor="@color/bloodorange"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editEmail"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailDate" />

    <TextView
        android:id="@+id/detailDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/date"
        android:textAlignment="textEnd"
        android:textColor="@color/bloodorange"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editDate"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailPhoneNo" />

    <TextView
        android:id="@+id/detailEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:text="@string/email"
        android:textAlignment="textEnd"
        android:textColor="@color/bloodorange"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editEmail"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailDate" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPhoneNumber" />

    <TextView
        android:id="@+id/editPhoneNumber"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="4dp"
        android:gravity="start"
        android:inputType="phone"
        android:textAlignment="viewStart"
        android:textColor="@color/bloodorange"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number|textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDate" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/name"
        android:textAlignment="textEnd"
        android:textColor="@color/bloodorange"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editName"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detailPhoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginRight="8dp"
        android:text="@string/phoneNo"
        android:textAlignment="textEnd"
        android:textColor="@color/bloodorange"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editPhoneNumber"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailName" />

    <Button
        android:id="@+id/editDonationButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteDonationButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteDonationButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editDonationButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>